attribute name template binding

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </code></pre>
 <h3 id="%E5%8F%98%E9%87%8F">变量</h3>
 <p>  <code>{{name}}</code></p>
-<p>  两组大括号表示普通变量. 变量占位符只能位于文本节点和属性节点当中, 属性节点包括属性名和属性值. 深度变量用点表示法表示, 如: <code>{{todos.length}}</code></p>
+<p>  两组大括号表示普通变量. 变量占位符只能位于文本节点和属性节点当中, 属性节点包括属性名和属性值. 深度变量可用点表示法和下标及表示法, 如: <code>{{todos.length}}</code>，<code>{{todos['length']}}</code></p>
 <h3 id="%E6%9D%A1%E4%BB%B6">条件</h3>
 <p>  <code>a-if="{{val}}"</code></p>
 <p>  有 <code>a-if</code> 属性的节点会根据 <code>a-if</code> 属性的值对应的数据来决定该节点是否存在于 DOM 树中.</p>
