--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,7 @@
   <![endif]-->
   <script type="text/javascript" src="../dist/ant.js"></script>
   <!--[if lt IE 8]>
+  <script>window.oldIE = true;</script>
   <script type="text/javascript" src="../third-part/json2.js"></script>
   <![endif]-->
 </head>
