defaults data, events, filters

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p>Ant.js 可以为 HTML 应用提供一个绑定数据的模板系统, 使其具有数据驱动界面的能力. </p>
 <h2 id="%E5%85%BC%E5%AE%B9%E6%80%A7%E5%92%8C%E4%BE%9D%E8%B5%96">兼容性和依赖</h2>
 <ul>
-<li>Ant.js 可以在 IE6+ 的浏览器中使用, 其核心部分不需要任何依赖. 委托事件扩展部分需要 jQuery.</li>
+<li>Ant.js 可以在 IE6+ 的浏览器中使用, 其核心部分不需要任何依赖.</li>
 <li>借助 <a href="https://github.com/tmpvar/jsdom">jsdom</a>, ant.js 也可以在 node.js 中作为 HTML 的模板引擎. </li>
 </ul>
 <h2 id="%E4%B8%8B%E8%BD%BD%E5%92%8C%E5%AE%89%E8%A3%85">下载和安装</h2>
