--- a/index.html
+++ b/index.html
@@ -414,15 +414,19 @@
 <li>邮件讨论组：<a href="mailto:antjs@librelist.com">antjs@librelist.com</a></li>
 </ul>
 <h2 id="%E6%9B%B4%E6%96%B0%E6%97%A5%E5%BF%97">更新日志</h2>
+<p>Version <strong><a href="https://rawgithub.com/antjs/ant.js/v0.2.0-alpha/index.html">0.2.0-alpha</a></strong> -- 2013-12-4</p>
 <ul>
-<li>All of ant attribute(a-model, a-repeat, a-if) must use <code>{{}}</code> to binding.</li>
-<li>Change <code>.setParital</code> argument <code>opts.node</code> to <code>opts.target</code>.</li>
+<li>所有的 ant 属性(a-model, a-repeat, a-if) 都要使用 <code>{{}}</code> 去绑定了.</li>
+<li>子模板方法 <code>.setParital</code> 的参数变更: <code>opts.node</code> --&gt; <code>opts.target</code>.</li>
+<li>表达式支持.</li>
+<li>HTML 元素属性可以作为绑定目标了.</li>
+<li>条件属性支持.</li>
 </ul>
 <p>Version <strong><a href="https://rawgithub.com/antjs/ant.js/v0.1.3/index.html">0.1.3</a></strong> -- 2013-10-24</p>
 <ul>
-<li>More Tests.</li>
-<li>Tests can run in node now, not only phantom.js.</li>
-<li>Two way binding for all editable element.</li>
+<li>更多测试用例.</li>
+<li>测试不光跑在 phantom.js 中了, 可以真正的在 nodeJs 环境中跑了.</li>
+<li>为可编辑 HTML 元素添加双向绑定功能.</li>
 </ul>
 <p>Version <strong><a href="https://rawgithub.com/antjs/ant.js/v0.1.2/index.html">0.1.2</a></strong> -- 2013-09-02</p>
 <ul>
