$index for a-repeat

--- a/examples/recursive-list.html
+++ b/examples/recursive-list.html
@@ -12,7 +12,7 @@
   <h1>Ant.js 中的嵌套数组: </h1>
 	<div id=template>
     <ul>
-      <li a-repeat={{province}}><span>{{name}}</span>
+      <li a-repeat={{province}}><span>{{$index + 1}} {{name}}</span>
         <ul>
           <li a-repeat={{city}}><span>{{name}}</span>
             <ul a-if={{county}}>
