--- a/index.html
+++ b/index.html
@@ -414,13 +414,14 @@
 <li>邮件讨论组：<a href="mailto:antjs@librelist.com">antjs@librelist.com</a></li>
 </ul>
 <h2 id="%E6%9B%B4%E6%96%B0%E6%97%A5%E5%BF%97">更新日志</h2>
-<p>Version <strong><a href="https://rawgithub.com/antjs/ant.js/v0.2.0-alpha/index.html">0.2.0-alpha</a></strong> -- 2013-12-4</p>
+<p>Version <strong><a href="https://rawgithub.com/antjs/ant.js/v0.2.0-beta/index.html">0.2.0-beta</a></strong> -- 2013-12-8</p>
 <ul>
 <li>所有的 ant 属性(a-model, a-repeat, a-if) 都要使用 <code>{{}}</code> 去绑定了.</li>
 <li>子模板方法 <code>.setParital</code> 的参数变更: <code>opts.node</code> --&gt; <code>opts.target</code>.</li>
 <li>表达式支持.</li>
 <li>HTML 元素属性可以作为绑定目标了.</li>
 <li>条件属性支持.</li>
+<li>循环的索引用 <code>$index</code> 表示了.</li>
 </ul>
 <p>Version <strong><a href="https://rawgithub.com/antjs/ant.js/v0.1.3/index.html">0.1.3</a></strong> -- 2013-10-24</p>
 <ul>
