ant.github.io/tutorials.js/

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 <ul>
 <li><a href="examples/2-way-binding.html">双向绑定的例子</a></li>
 <li><a href="examples/backbase/">noBackend 的实时评论系统</a></li>
-<li><a href="http://justan.github.io/tutorials.js">Tutorials.js</a></li>
+<li><a href="http://antjs.github.io/tutorials.js">Tutorials.js</a></li>
 </ul>
 <h2 id="%E8%AE%A8%E8%AE%BA">讨论</h2>
 <ul>
