--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li>» <a href="https://github.com/antjs/ant.js">Github 上的 ant.js</a></li>
       <!-- <li>» <a href="learn">学习 ant.js</a></li> -->
     </ul>
-    <ul class="sections"><li><h4><a href="#%E5%85%BC%E5%AE%B9%E6%80%A7%E5%92%8C%E4%BE%9D%E8%B5%96">兼容性和依赖</a></h4></li><li><h4><a href="#%E4%B8%8B%E8%BD%BD%E5%92%8C%E5%AE%89%E8%A3%85">下载和安装</a></h4></li><li><h4><a href="#%E6%A8%A1%E6%9D%BF%E8%AF%AD%E6%B3%95">模板语法</a></h4><ul><li><a href="#%E5%8F%98%E9%87%8F">变量</a></li><li><a href="#%E6%9D%A1%E4%BB%B6">条件</a></li><li><a href="#%E6%9D%A1%E4%BB%B6%E5%B1%9E%E6%80%A7">条件属性</a></li><li><a href="#%E5%BE%AA%E7%8E%AF">循环</a></li><li><a href="#%E5%8F%8C%E5%90%91%E7%BB%91%E5%AE%9A">双向绑定</a></li><li><a href="#%E9%9D%9E%E8%BD%AC%E4%B9%89%20html">非转义 HTML</a></li><li><a href="#%E5%AD%90%E6%A8%A1%E6%9D%BF">子模板</a></li><li><a href="#%E8%BF%87%E6%BB%A4%E5%99%A8">过滤器</a></li><li><a href="#%E8%A1%A8%E8%BE%BE%E5%BC%8F">表达式</a></li></ul></li><li><h4><a href="#api">API</a></h4><ul><li><a href="#new%20ant(template%5B%2C%20options%5D)">new Ant(template[, options])</a></li><li><a href="#ant.extend(prototypeproperties%5B%2C%20staticproperties%5D)">Ant.extend(prototypeProperties[, staticProperties])</a></li></ul></li><li><h4><a href="#%E5%AE%9E%E4%BE%8B%E6%96%B9%E6%B3%95%3A">实例方法:</a></h4><ul><li><a href="#.get(keypath)">.get(keypath)</a></li><li><a href="#.set(keypath%5B%2C%20val%2C%20opts%5D)">.set(keypath[, val, opts])</a></li><li><a href="#.render(%5Bdata%5D)">.render([data])</a></li><li><a href="#.update(%5Bkeypath%2C%20data%2C%20isextend%5D)">.update([keyPath, data, isExtend])</a></li><li><a href="#.clone(%5Bopts%5D)">.clone([opts])</a></li><li><a href="#.on(eventname%2C%20callback)">.on(eventName, callback)</a></li><li><a href="#.off(eventname%5B%2C%20callback%5D)">.off(eventName[, callback])</a></li><li><a href="#.trigger(eventname%5B%2C%20extraparameters%20%5D)">.trigger(eventName[, extraParameters ])</a></li><li><a href="#.init(tpl%5B%2C%20options%5D)">.init(tpl[, options])</a></li><li><a href="#.setpartial(info)">.setPartial(info)</a></li><li><a href="#.watch(keypath%2C%20callback)">.watch(keyPath, callback)</a></li><li><a href="#.unwatch(keypath%2C%20callback)">.unwatch(keyPath, callback)</a></li></ul></li><li><h4><a href="#%E5%AE%9E%E4%BE%8B%E5%B1%9E%E6%80%A7%3A%20">实例属性: </a></h4><ul><li><a href="#.el">.el</a></li><li><a href="#.tpl">.tpl</a></li><li><a href="#.data">.data</a></li><li><a href="#.options">.options</a></li><li><a href="#.isrendered">.isRendered</a></li></ul></li><li><h4><a href="#%E6%93%8D%E4%BD%9C%E6%95%B0%E7%BB%84">操作数组</a></h4></li><li><h4><a href="#%E4%BA%8B%E4%BB%B6%E5%A7%94%E6%89%98">事件委托</a></h4></li><li><h4><a href="#%E4%BD%BF%E7%94%A8%E7%A4%BA%E4%BE%8B">使用示例</a></h4></li><li><h4><a href="#%E8%AE%A8%E8%AE%BA">讨论</a></h4></li><li><h4><a href="#%E6%9B%B4%E6%96%B0%E6%97%A5%E5%BF%97">更新日志</a></h4></li></ul>
+    <ul class="sections"><li><h4><a href="#%E5%85%BC%E5%AE%B9%E6%80%A7%E5%92%8C%E4%BE%9D%E8%B5%96">兼容性和依赖</a></h4></li><li><h4><a href="#%E4%B8%8B%E8%BD%BD%E5%92%8C%E5%AE%89%E8%A3%85">下载和安装</a></h4></li><li><h4><a href="#%E6%A8%A1%E6%9D%BF%E8%AF%AD%E6%B3%95">模板语法</a></h4><ul><li><a href="#%E5%8F%98%E9%87%8F">变量</a></li><li><a href="#%E6%9D%A1%E4%BB%B6">条件</a></li><li><a href="#%E6%9D%A1%E4%BB%B6%E5%B1%9E%E6%80%A7">条件属性</a></li><li><a href="#%E5%BE%AA%E7%8E%AF">循环</a></li><li><a href="#%E5%8F%8C%E5%90%91%E7%BB%91%E5%AE%9A">双向绑定</a></li><li><a href="#%E9%9D%9E%E8%BD%AC%E4%B9%89%20html">非转义 HTML</a></li><li><a href="#%E5%AD%90%E6%A8%A1%E6%9D%BF">子模板</a></li><li><a href="#filter%20(%E8%BF%87%E6%BB%A4%E5%99%A8)">Filter (过滤器)</a></li><li><a href="#%E8%A1%A8%E8%BE%BE%E5%BC%8F">表达式</a></li></ul></li><li><h4><a href="#api">API</a></h4><ul><li><a href="#new%20ant(template%5B%2C%20options%5D)">new Ant(template[, options])</a></li><li><a href="#ant.extend(prototypeproperties%5B%2C%20staticproperties%5D)">Ant.extend(prototypeProperties[, staticProperties])</a></li></ul></li><li><h4><a href="#%E5%AE%9E%E4%BE%8B%E6%96%B9%E6%B3%95%3A">实例方法:</a></h4><ul><li><a href="#.get(keypath)">.get(keypath)</a></li><li><a href="#.set(keypath%5B%2C%20val%2C%20opts%5D)">.set(keypath[, val, opts])</a></li><li><a href="#.render(%5Bdata%5D)">.render([data])</a></li><li><a href="#.update(%5Bkeypath%2C%20data%2C%20isextend%5D)">.update([keyPath, data, isExtend])</a></li><li><a href="#.clone(%5Bopts%5D)">.clone([opts])</a></li><li><a href="#.on(eventname%2C%20callback)">.on(eventName, callback)</a></li><li><a href="#.off(eventname%5B%2C%20callback%5D)">.off(eventName[, callback])</a></li><li><a href="#.trigger(eventname%5B%2C%20extraparameters%20%5D)">.trigger(eventName[, extraParameters ])</a></li><li><a href="#.init(tpl%5B%2C%20options%5D)">.init(tpl[, options])</a></li><li><a href="#.setpartial(info)">.setPartial(info)</a></li><li><a href="#.setfilter(filtername%2C%20handler)">.setFilter(filterName, handler)</a></li><li><a href="#.watch(keypath%2C%20callback)">.watch(keyPath, callback)</a></li><li><a href="#.unwatch(keypath%2C%20callback)">.unwatch(keyPath, callback)</a></li></ul></li><li><h4><a href="#%E5%AE%9E%E4%BE%8B%E5%B1%9E%E6%80%A7%3A%20">实例属性: </a></h4><ul><li><a href="#.el">.el</a></li><li><a href="#.tpl">.tpl</a></li><li><a href="#.data">.data</a></li><li><a href="#.options">.options</a></li><li><a href="#.isrendered">.isRendered</a></li></ul></li><li><h4><a href="#%E6%93%8D%E4%BD%9C%E6%95%B0%E7%BB%84">操作数组</a></h4></li><li><h4><a href="#%E4%BA%8B%E4%BB%B6%E5%A7%94%E6%89%98">事件委托</a></h4></li><li><h4><a href="#%E4%BD%BF%E7%94%A8%E7%A4%BA%E4%BE%8B">使用示例</a></h4></li><li><h4><a href="#%E8%AE%A8%E8%AE%BA">讨论</a></h4></li><li><h4><a href="#%E6%9B%B4%E6%96%B0%E6%97%A5%E5%BF%97">更新日志</a></h4></li></ul>
   </header>
   <section id="content">
     <h1>Ant.js <span class="version">(0.2.1)</span></h1>
@@ -64,8 +64,8 @@
 </code></pre>
 <h3 id="%E5%8F%98%E9%87%8F">变量</h3>
 <p>  <code>{{name}}</code></p>
-<p>  两组大括号表示普通变量. 变量占位符只能位于文本节点和属性节点当中, 属性节点包括属性名和属性值. 深度变量可用点表示法和下标及表示法, 如: <code>{{todos.length}}</code>，<code>{{todos['length']}}</code></p>
-<p>  HTML 属性名不能包含空格，所以 <code>{{}}</code> 用在属性名中不能包含空格。</p>
+<p>  两组大括号表示普通变量. 变量占位符只能位于文本节点和属性节点当中, 属性节点包括属性名和属性值. 深度变量可用点表示法和下标及表示法, 如: <code>{{todos.length}}</code>, <code>{{todos['length']}}</code></p>
+<p>  HTML 属性名不能包含空格, 所以 <code>{{}}</code> 用在属性名中不能包含空格. </p>
 <h3 id="%E6%9D%A1%E4%BB%B6">条件</h3>
 <p>  <code>a-if="{{condition}}"</code></p>
 <p>  有 <code>a-if</code> 属性的节点会根据 <code>{{condition}}</code> 的值来决定该节点是否存在于 DOM 树中.</p>
@@ -76,7 +76,7 @@
 <p>  对应数据 <code>{todos: []}</code>, 由于 <code>todos</code> 数组的长度为零, 所以该 <code>ul</code> 将不会出现在 DOM 树中.</p>
 <h3 id="%E6%9D%A1%E4%BB%B6%E5%B1%9E%E6%80%A7">条件属性</h3>
 <p>  <code>readonly?={{condition}}</code></p>
-<p>  类似 <code>a-if</code>, 如果 condition 为真，<code>readonly</code> 将出现在该属性对应的节点中。</p>
+<p>  类似 <code>a-if</code>, 如果 condition 为真, <code>readonly</code> 将出现在该属性对应的节点中. </p>
 <h3 id="%E5%BE%AA%E7%8E%AF">循环</h3>
 <p>  <code>a-repeat="{{list}}"</code></p>
 <p>  带有 <code>a-repeat</code> 属性的元素将根据对应数组而重复. 并且该元素及其子元素的变量占位符的作用域将会切换到数组数据当中. 类似 mustache, 如果想使用数组之外的父辈变量, 直接使用其变量名即可.</p>
@@ -145,23 +145,24 @@
 <p>  占位符 <code>{{&gt; partialName}}</code> 表示该处将插入子模板 partialName 中的内容. partialName 与 <code>ant.options.partials</code> 中的值对应. </p>
 <p>  当子模板内容是字符串时, <code>{{{&gt;partialName}}}</code>将不转义该字符串. 如果字符串中包含 HTML 标签, 将解析成 DOM 节点. 子模板是一个 DOM 节点时, 则将忽略非转义选项.</p>
 <p>  子模板可以通过 <code>ant.setPartial</code> 方法延时添加.</p>
-<h3 id="%E8%BF%87%E6%BB%A4%E5%99%A8">过滤器</h3>
+<h3 id="filter%20(%E8%BF%87%E6%BB%A4%E5%99%A8)">Filter (过滤器)</h3>
 <p>  <code>{{val | filter1:arg1:arg2 | filter2}}</code></p>
-<p>  过滤器是实际上一些可以接受参数的函数。</p>
+<p>  Filter 是实际上一些可以接受参数的函数. 每个 Filter 都以前面表达式的值为第一个参数, 其他的参数可以用 <code>:</code> 表示. Filter 可以同其他表达式混合使用.</p>
+<p>  如: <code>{{(val | filter1:arg1:arg2 | filter2) + " -- " + (val2 * val4 | filter3)}}</code></p>
 <h3 id="%E8%A1%A8%E8%BE%BE%E5%BC%8F">表达式</h3>
 <p>  <code>{{ val1 + val2 }}</code></p>
-<p>  Ant 的表达式是 javascript 表达式的严格子集。</p>
+<p>  Ant 的表达式是 javascript 表达式的严格子集.</p>
 <ul>
-<li>字符串操作： <code>{{'String'}}</code>, <code>{{'String ' + "concat"}}</code></li>
-<li>数学运算：<code>{{ 1 + 2}}</code>, <code>{{ (1 - 2) * 4 / 2 }}</code></li>
-<li>逻辑运算：<code>{{0 === false}}</code>, <code>{{ 2 &gt;= 1 }}</code>, <code>{{ val &amp;&amp; 1 }}</code>, <code>{{ val || 1 }}</code>, <code>{{ val ? 0 : 1 }}</code>, <code>{{ !val }}</code></li>
-<li>部分函数调用：<code>{{Math.round(num)}}</code>, <code>{{'a'.toUpperCase()}}</code>, <code>{{(Math.random()).toFixed(2)}}</code></li>
+<li>字符串操作:  <code>{{'String'}}</code>, <code>{{'String ' + "concat"}}</code></li>
+<li>数学运算: <code>{{ 1 + 2}}</code>, <code>{{ (1 - 2) * 4 / 2 }}</code></li>
+<li>逻辑运算: <code>{{0 === false}}</code>, <code>{{ 2 &gt;= 1 }}</code>, <code>{{ val &amp;&amp; 1 }}</code>, <code>{{ val || 1 }}</code>, <code>{{ val ? 0 : 1 }}</code>, <code>{{ !val }}</code></li>
+<li>部分函数调用: <code>{{Math.round(num)}}</code>, <code>{{'a'.toUpperCase()}}</code>, <code>{{(Math.random()).toFixed(2)}}</code></li>
 </ul>
-<p>  关于表达式需要注意的一点是，<code>{{}}</code>占位符在不同的位置所允许使用的表达式（包括过滤器）也有所不同。目前分为几种情况：</p>
+<p>  关于表达式需要注意的一点是, <code>{{}}</code>占位符在不同的位置所允许使用的表达式 (包括过滤器) 也有所不同. 目前分为几种情况: </p>
 <ol>
-<li>文本、属性值（包括条件属性）和 <code>a-if</code> 允许使用所有的表达式。</li>
-<li>属性名在 nodeJs 和现代浏览器（IE 10+）在属性名中也可以使用所有表达式。而在 IE 10 以前的浏览器中表达式中不能使用字符串。</li>
-<li><code>z-model</code>, <code>z-repeat</code> 中不能使用表达式。</li>
+<li>文本、属性值 (包括条件属性) 和 <code>a-if</code> 允许使用所有的表达式. </li>
+<li>属性名在 nodeJs 和现代浏览器 (IE 10+) 在属性名中也可以使用所有表达式. 而在 IE 10 以前的浏览器中表达式中不能使用字符串. </li>
+<li><code>z-model</code>, <code>z-repeat</code> 中不能使用表达式. </li>
 </ol>
 <h2 id="api">API</h2>
 <h3 id="new%20ant(template%5B%2C%20options%5D)">new Ant(template[, options])</h3>
@@ -219,7 +220,7 @@
 </ul>
 <h3 id="ant.extend(prototypeproperties%5B%2C%20staticproperties%5D)">Ant.extend(prototypeProperties[, staticProperties])</h3>
 <p>  构造函数的扩展. 可以扩展 Ant 的原型对象来为实例提供属性和方法, 也可以直接扩展构造函数及静态方法.</p>
-<p>  通过扩展原型对象的 <code>defaults</code> 属性，可以为新构造函数提供一些默认值。包括： <code>data</code>, 'filters', 'partials', 'events' 等所有通过构造函数 options 参数提供的参数。</p>
+<p>  通过扩展原型对象的 <code>defaults</code> 属性, 可以为新构造函数提供一些默认值. 包括:  <code>data</code>, 'filters', 'partials', 'events' 等所有通过构造函数 options 参数提供的参数. </p>
 <ul>
 <li><p><strong>prototypeProperties</strong> <code>Object</code></p>
 <p>扩展的原型对象.</p>
@@ -363,6 +364,8 @@
 <li><strong>[info.escape]</strong> <code>Boolean</code> 是否转义字符串子模板</li>
 <li><strong>[info.path]</strong> <code>String</code> 指定子模板中变量在数据中的作用域</li>
 </ul>
+<h3 id=".setfilter(filtername%2C%20handler)">.setFilter(filterName, handler)</h3>
+<p>  添加自定义 filter.</p>
 <h3 id=".watch(keypath%2C%20callback)">.watch(keyPath, callback)</h3>
 <p>  添加自定义监控.</p>
 <h3 id=".unwatch(keypath%2C%20callback)">.unwatch(keyPath, callback)</h3>
@@ -411,7 +414,7 @@
 <h2 id="%E8%AE%A8%E8%AE%BA">讨论</h2>
 <ul>
 <li><a href="https://github.com/antjs/ant.js/issues">Github issue</a></li>
-<li>邮件讨论组：<a href="mailto:antjs@librelist.com">antjs@librelist.com</a></li>
+<li>邮件讨论组: <a href="mailto:antjs@librelist.com">antjs@librelist.com</a></li>
 </ul>
 <h2 id="%E6%9B%B4%E6%96%B0%E6%97%A5%E5%BF%97">更新日志</h2>
 <p>Version <strong><a href="https://rawgithub.com/antjs/ant.js/v0.2.1/index.html">0.2.1</a></strong> -- 2013-12-14</p>
