--- a/examples/array-maintain.html
+++ b/examples/array-maintain.html
@@ -8,7 +8,7 @@
   <![endif]-->
   <script type="text/javascript" src="../dist/ant.js"></script>
   <script type="text/javascript" src="../third-part/jquery.min.js"></script>
-  <script type="text/javascript" src="../src/event.js"></script>
+  <script type="text/javascript" src="../extensions/event.js"></script>
   <style>
   </style>
 </head>
@@ -22,14 +22,14 @@
     <ul>
       <li a-repeat={{list}}>{{.}} <button class='edit' title="编辑">编辑</button><button class='del' title="删除">删除</button></li>
     </ul>
-    <form onsubmit='return false;'><label><input type="text" a-model='{{cur}}'></label><input type="submit" value="{{index ? '确定修改': '添加'}}"><button a-if={{index}} class='cancel-edit'>取消编辑</button</form>
+    <form onsubmit='return false;'><label><input type="text" a-model='{{cur}}'></label><input type="submit" value="{{index ? '确定修改': '添加'}}"><button a-if={{index}} class='cancel-edit'>取消编辑</button></form>
   </div>
 <script type="text/javascript">
 var ant = new Ant(document.getElementById('template'), {
   data: {list:["广东省", "北京市", "上海市", "湖北省", "重庆市", "浙江省"]}
 , events: {
     'click .del': function(e) {
-      this.data.list.splice(e.target.parentNode['a-index'], 1);
+      this.data.list.splice(e.target.parentNode['$index'], 1);
     }
   , 'click .sort': function() {
       this.data.list.sort()
@@ -38,7 +38,7 @@ var ant = new Ant(document.getElementById('template'), {
       this.data.list.reverse()
     }
   , 'click .edit': function(e) {
-      var index = e.target.parentNode['a-index'];
+      var index = e.target.parentNode['$index'];
       this.set({'index': index + '', cur: this.data.list[index]});
       $('input:text').select();
     }
