--- a/test/index.html
+++ b/test/index.html
@@ -5,7 +5,7 @@
 	<title>Ant.js测试页面</title>
   <link rel="stylesheet" type="text/css" href="../node_modules/mocha/mocha.css" media="all"/>
   <script type="text/javascript" src="../node_modules/mocha/mocha.js"></script>
-  <script type="text/javascript" src="../node_modules/expect.js/expect.js"></script>
+  <script type="text/javascript" src="../node_modules/expect.js/index.js"></script>
   <script type="text/javascript">
     mocha.setup('bdd');
   </script>
