--- a/examples/recursive-list.html
+++ b/examples/recursive-list.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="../dist/ant.js"></script>
 </head>
 <body>
-  <h1>Ant.js 中的嵌套数组: </h1>
+  <h1>嵌套数组: </h1>
 	<div id=template>
     <!-- <ul>
       <li a-repeat={{province}}><span>{{$index + 1}} {{name}}</span>
@@ -26,10 +26,10 @@
     <ul>
       <li a-repeat="{{p in province}}">{{p.name}}
         <ul>
-          <li a-repeat="{{c in p.city}}">{{p.name}}
-            <!-- <ul a-if="{{c.county}}">
-              <li a-repeat="{{o in c.county}}">{{o}}</li>
-            </ul> -->
+          <li a-repeat="{{c in city}}">{{p.name}} {{c.name}}
+            <ul a-if="{{c.county}}">
+              <li a-repeat="{{o in c.county}}">{{o}}<small>{{c.name}} {{p.name}}</small></li>
+            </ul>
           </li>
         </ul>
       </li>
@@ -39,7 +39,14 @@
   var ant = new Ant(document.getElementById('template'), {
     data: {
       province:[
-        {name: '北京市', city: [{name:"崇文区"}]}
+        {name: '北京市', city: [{name:"东城区"},{name:"西城区"},{name:"崇文区"}]}
+      , {name: '上海市', city: [{name:"黄浦区"},{name:"闸北区"},{name:"徐汇区"}]}
+      , {name: '广东省', city: [{name:"广州",county:["荔湾区","越秀区","海珠区","天河区","白云区","黄埔区","番禺区"]}
+        , {name:"韶关",county:["武江区","浈江区","曲江区","始兴县"]}
+        , {name:"深圳",county:["罗湖区","福田区","南山区","宝安区","龙岗区","盐田区"]}
+        ]}
+       // {name: '北京市', city: [{name:"东城区"},{name:"西城区"}]}
+      //, {name: '上海市', city: [{name:"黄浦区"},{name:"闸北区"}]}
       ]
     }
   });
