--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-  <meta name="keywords" content="template, data binding, two way binding, mdv, javascript, 双向绑定, 模板" />
-  <meta name="description" content="数据驱动 HTML 模板" />
-  <meta property="og:title" content="Ant.js" />
-  <meta property="og:description" content="数据驱动 HTML 模板" />
-  <meta property="og:url" content="http://antjs.org" />
+	<meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <meta name="keywords" content="template, data binding, two way binding, mdv, javascript, 双向绑定, 模板">
+  <meta name="description" content="数据驱动 HTML 模板">
+  <meta property="og:title" content="Ant.js">
+  <meta property="og:description" content="数据驱动 HTML 模板">
+  <meta property="og:url" content="http://antjs.org">
 	<title>Ant.js - 数据驱动 HTML 模板</title>
   
-  <link rel="stylesheet" href="docs/css/styles.css" />
-  <link rel="stylesheet" href="docs/css/pygment_trac.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="docs/css/styles.css">
+  <link rel="stylesheet" href="docs/css/pygment_trac.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
