--- a/examples/recursive-list.html
+++ b/examples/recursive-list.html
@@ -7,40 +7,66 @@
   <script type="text/javascript" src="../src/ant-es5-shim.js"></script>
   <![endif]-->
   <script type="text/javascript" src="../dist/ant.js"></script>
+  <script type="text/javascript" src="../third-part/jquery.min.js"></script>
+  <script type="text/javascript" src="../extensions/event.js"></script>
 </head>
 <body>
   <h1>嵌套数组: </h1>
 	<div id=template>
-    <input type="text" value="省市县" a-model="{{title}}" />
-    <!-- <h2>{{title}}</h2> -->
     <ul>
-      <li a-repeat="{{p in province}}">{{p.name}} {{title}}
-        <ul>
-          <li a-repeat="{{c in p.city}}">{{p.name}} {{c.name}}
-            <input type="text" a-model="{{p.name}}">
-            <!-- <ul a-if="{{c.county}}">
-              <li a-repeat="{{o in c.county}}">{{o}}<small>{{c.name}} {{p.name}}</small>
-                <input type="text" a-model="{{c.name}}">
+      <li a-repeat="item in list">
+        {{{> tree}}}
+      </li>
+    </ul>
+    <ul>
+    	<li a-repeat="p in list">
+        {{p.name}}
+    		<ul>
+    			<li a-repeat="c in p.child">
+            {{p.name}} - {{c.name}}
+            <!-- <ul>
+            	<li a-repeat="r in c.child">
+                {{p.name}} - {{c.name}} - {{r.name}}
+                <input type="text" a-model="r.name" />
+                <input type="text" a-model="c.name" />
+                <input type="text" a-model="p.name" />
               </li>
             </ul> -->
           </li>
-        </ul>
-      </li>
+    		</ul>
+    	</li>
     </ul>
   </div>
+<script id="tree" type="x-ant/template">
+  {{{item.$index}}}. <span contenteditable a-text="item.name" ></span> <span class="add"> + </span>
+  <ul>
+    <li a-repeat="item in item.child">
+      {{{> tree}}}
+    </li>
+  </ul>
+</script>
 <script type="text/javascript">
   var ant = new Ant(document.getElementById('template'), {
     data: {
-      province:[
-      //  {name: '北京市', city: [{name:"东城区"},{name:"西城区"},{name:"崇文区"}]}
-      //, {name: '上海市', city: [{name:"黄浦区"},{name:"闸北区"},{name:"徐汇区"}]}
-      //, {name: '广东省', city: [{name:"广州",county:["荔湾区","越秀区","海珠区","天河区","白云区","黄埔区","番禺区"]}
-       // , {name:"韶关",county:["武江区","浈江区","曲江区","始兴县"]}
-       // , {name:"深圳",county:["罗湖区","福田区","南山区","宝安区","龙岗区","盐田区"]}
-       // ]}
-        {name: '北京市', city: [{name:"东城区"}]}
+      list:[
+      //  {name: '北京市', child: [{name:"东城区"},{name:"西城区"},{name:"崇文区"}]}
+      //, {name: '上海市', child: [{name:"黄浦区"},{name:"闸北区"},{name:"徐汇区"}]}
+     //    , {name: '广东省', child: [
+      //    {name:"广州",child:[
+      //      {name:"荔湾区"}//,{name:"越秀区"},{name:"海珠区"},{name:"天河区"},{name:"白云区"},{name:"黄埔区"},{name:"番禺区"}
+      //    ]}
+        //, {name:"韶关",child:[{name:"武江区"},{name:"浈江区"},{name:"曲江区"},{name:"始兴县"}]}
+        //, {name:"深圳",child:[{name:"罗湖区"},{name:"福田区"},{name:"南山区"},{name:"宝安区"},{name:"龙岗区"},{name:"盐田区"}]}
+     //   ]}
+        {name: '北京市', child: [{name:"东城区"}]}
       //, {name: '上海市', city: [{name:"黄浦区"},{name:"闸北区"}]}
       ]
+    }
+  , partials: {
+      tree: document.getElementById('tree').innerHTML
+    }
+  , events: {
+      
     }
   });
 </script>
