--- a/examples/attr.html
+++ b/examples/attr.html
@@ -13,7 +13,7 @@
 	<div id=template>
     <div class="show" a-attr="{style: 'width:' + width + '%; color: ' + color + '; height:' + height * 2 + 'px; background-color:' + bgcolor}">lllafasdf</div>
     <div class="control" a-attr="attr">
-      <label for="width">width<input type="range" a-model=width id="width"></label>
+      <label for="width">width<input type="range" value=50 a-model=width id="width"></label>
       <label for="height">height<input type="range" a-model=height id="height"></label>
       <label for="color" a-style="color: {{color}}">文字颜色<input type="color" a-model=color value="#0044ff" id="color"></label>
       <label for="bgcolor">背景颜色<input type="color" a-model=bgcolor value="#efefef" id="bgcolor"></label>
