--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 	<div class="wrapper">
   <header id="nav">
-    <h4><a href="http://antjs.org">Ant.js <span class="version">(0.2.3)</span></a></h4>
+    <h4><a href="http://antjs.org">Ant.js <span class="version">(0.3.0-alpha)</span></a></h4>
     <ul class="sections">
       <li>» <a href="https://github.com/antjs/ant.js">Github 上的 ant.js</a></li>
       <!-- <li>» <a href="learn">学习 ant.js</a></li> -->
@@ -28,7 +28,7 @@
     <ul class="sections"><li><h4><a href="#%E5%85%BC%E5%AE%B9%E6%80%A7%E5%92%8C%E4%BE%9D%E8%B5%96">兼容性和依赖</a></h4></li><li><h4><a href="#%E4%B8%8B%E8%BD%BD%E5%92%8C%E5%AE%89%E8%A3%85">下载和安装</a></h4></li><li><h4><a href="#%E6%A8%A1%E6%9D%BF%E8%AF%AD%E6%B3%95">模板语法</a></h4><ul><li><a href="#%E5%8F%98%E9%87%8F">变量</a></li><li><a href="#%E6%9D%A1%E4%BB%B6">条件</a></li><li><a href="#%E6%9D%A1%E4%BB%B6%E5%B1%9E%E6%80%A7">条件属性</a></li><li><a href="#%E5%BE%AA%E7%8E%AF">循环</a></li><li><a href="#%E5%8F%8C%E5%90%91%E7%BB%91%E5%AE%9A">双向绑定</a></li><li><a href="#%E9%9D%9E%E8%BD%AC%E4%B9%89%20html">非转义 HTML</a></li><li><a href="#%E5%AD%90%E6%A8%A1%E6%9D%BF">子模板</a></li><li><a href="#filter%20(%E8%BF%87%E6%BB%A4%E5%99%A8)">Filter (过滤器)</a></li><li><a href="#%E8%A1%A8%E8%BE%BE%E5%BC%8F">表达式</a></li></ul></li><li><h4><a href="#api">API</a></h4><ul><li><a href="#new%20ant(template%5B%2C%20options%5D)">new Ant(template[, options])</a></li><li><a href="#ant.extend(prototypeproperties%5B%2C%20staticproperties%5D)">Ant.extend(prototypeProperties[, staticProperties])</a></li></ul></li><li><h4><a href="#%E5%AE%9E%E4%BE%8B%E6%96%B9%E6%B3%95%3A">实例方法:</a></h4><ul><li><a href="#.get(keypath)">.get(keypath)</a></li><li><a href="#.set(keypath%5B%2C%20val%2C%20opts%5D)">.set(keypath[, val, opts])</a></li><li><a href="#.render(%5Bdata%5D)">.render([data])</a></li><li><a href="#.clone(%5Bopts%5D)">.clone([opts])</a></li><li><a href="#.on(eventname%2C%20callback)">.on(eventName, callback)</a></li><li><a href="#.off(eventname%5B%2C%20callback%5D)">.off(eventName[, callback])</a></li><li><a href="#.trigger(eventname%5B%2C%20extraparameters%20%5D)">.trigger(eventName[, extraParameters ])</a></li><li><a href="#.init(tpl%5B%2C%20options%5D)">.init(tpl[, options])</a></li><li><a href="#.setpartial(info)">.setPartial(info)</a></li><li><a href="#.setfilter(filtername%2C%20handler)">.setFilter(filterName, handler)</a></li><li><a href="#.watch(keypath%2C%20callback)">.watch(keyPath, callback)</a></li><li><a href="#.unwatch(keypath%2C%20callback)">.unwatch(keyPath, callback)</a></li></ul></li><li><h4><a href="#%E5%AE%9E%E4%BE%8B%E5%B1%9E%E6%80%A7%3A%20">实例属性: </a></h4><ul><li><a href="#.el">.el</a></li><li><a href="#.tpl">.tpl</a></li><li><a href="#.data">.data</a></li><li><a href="#.options">.options</a></li><li><a href="#.isrendered">.isRendered</a></li></ul></li><li><h4><a href="#%E6%93%8D%E4%BD%9C%E6%95%B0%E7%BB%84">操作数组</a></h4></li><li><h4><a href="#%E4%BA%8B%E4%BB%B6%E5%A7%94%E6%89%98">事件委托</a></h4></li><li><h4><a href="#%E4%BD%BF%E7%94%A8%E7%A4%BA%E4%BE%8B">使用示例</a></h4></li><li><h4><a href="#%E8%AE%A8%E8%AE%BA">讨论</a></h4></li><li><h4><a href="#%E6%9B%B4%E6%96%B0%E6%97%A5%E5%BF%97">更新日志</a></h4></li></ul>
   </header>
   <section id="content">
-    <h1>Ant.js <span class="version">(0.2.3)</span></h1>
+    <h1>Ant.js <span class="version">(0.3.0-alpha)</span></h1>
     <p>Ant.js 可以为 HTML 应用提供一个绑定数据的模板系统, 使其具有数据驱动界面的能力. </p>
 <h2 id="%E5%85%BC%E5%AE%B9%E6%80%A7%E5%92%8C%E4%BE%9D%E8%B5%96">兼容性和依赖</h2>
 <ul>
@@ -414,6 +414,12 @@
 <li>邮件讨论组: <a href="mailto:antjs@librelist.com">antjs@librelist.com</a></li>
 </ul>
 <h2 id="%E6%9B%B4%E6%96%B0%E6%97%A5%E5%BF%97">更新日志</h2>
+<p>Version <strong><a href="https://rawgithub.com/antjs/ant.js/v0.3.0/index.html">0.3.0</a></strong> </p>
+<ul>
+<li>使用 CommonJs(browserify) 代替 AMD(requirejs) 作为内部模块规范.</li>
+<li>迭代指令使用 <code>in</code> 和 repeat 的方式.</li>
+<li>废弃 mustache 式的变量向上查找机制.</li>
+</ul>
 <p>Version <strong><a href="https://rawgithub.com/antjs/ant.js/v0.2.3/index.html">0.2.3</a></strong> -- 2014-04-01</p>
 <ul>
 <li>Bugs fix.</li>
