--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <meta name="keywords" content="template, data binding, two way binding, mdv, javascript, 双向绑定, 模板">
-  <meta name="description" content="数据驱动 HTML 模板">
-  <meta property="og:title" content="Ant.js">
-  <meta property="og:description" content="数据驱动 HTML 模板">
-  <meta property="og:url" content="http://antjs.org">
+	<meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+  <meta name="keywords" content="template, data binding, two way binding, mdv, javascript, 双向绑定, 模板" />
+  <meta name="description" content="数据驱动 HTML 模板" />
+  <meta property="og:title" content="Ant.js" />
+  <meta property="og:description" content="数据驱动 HTML 模板" />
+  <meta property="og:url" content="http://antjs.org" />
 	<title>Ant.js - 数据驱动 HTML 模板</title>
   
-  <link rel="stylesheet" href="docs/css/styles.css">
-  <link rel="stylesheet" href="docs/css/pygment_trac.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <link rel="stylesheet" href="docs/css/styles.css" />
+  <link rel="stylesheet" href="docs/css/pygment_trac.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -419,6 +419,8 @@
 <li>使用 CommonJs(browserify) 代替 AMD(requirejs) 作为内部模块规范.</li>
 <li>迭代指令使用 <code>in</code> 和 repeat 的方式.</li>
 <li>废弃 mustache 式的变量向上查找机制.</li>
+<li>绑定的 promise 支持.</li>
+<li>移除 <code>.isRendered</code> 属性.</li>
 </ul>
 <p>Version <strong><a href="https://rawgithub.com/antjs/ant.js/v0.2.3/index.html">0.2.3</a></strong> -- 2014-04-01</p>
 <ul>
