--- a/index.html
+++ b/index.html
@@ -421,6 +421,10 @@
 <li>废弃 mustache 式的变量向上查找机制.</li>
 <li>绑定的 promise 支持.</li>
 <li>移除 <code>.isRendered</code> 属性.</li>
+<li>移除 <code>.update</code> 方法.</li>
+<li>移除 <code>update, beforeInit, afterInit</code> 事件.</li>
+<li>移除了对 opts.init 参数的自动调用.</li>
+<li>新增 opts.watchers 参数.</li>
 </ul>
 <p>Version <strong><a href="https://rawgithub.com/antjs/ant.js/v0.2.3/index.html">0.2.3</a></strong> -- 2014-04-01</p>
 <ul>
