--- a/examples/2-way-binding.html
+++ b/examples/2-way-binding.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Ant.js</title>
   <script type="text/javascript" src="../src/ant-es5-shim.js"></script>
-  <script type="text/javascript" src="../dist/ant.js"></script>
+  <script type="text/javascript" src="../dist/ant.min.js"></script>
   <style>
     fieldset{
       margin:1em;
